[package]
name = "tron-api-client"
version = "0.0.1"
authors = ["Kevin Holder <kevholderx@gmail.com>"]
description = "Tron API client and CLI"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33"
url = "2.1.1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4.11"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"

[[bin]]
name = "tron"
path = "src/main.rs"
